# mumeparrot-backtest

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  backtest.cpp  backtest.py  bot.json  configs.json  exhaustive.py  fetch-charts.py  optimize.cpp  optimize.py  requirements.txt  run-exhaustive.sh  run-optimize.sh  server.cpp  server.py  sim.py  sync-tickers.py  tb_quad.ipynb  tickers.json  triplify.py
charts/: BNKU-SIM-RSI.csv  BNKU.csv  CURE-GEN.csv  CURE-SIM-RSI.csv  CURE.csv  DFEN-GEN.csv  DFEN-SIM-RSI.csv  DFEN.csv  DJINET.csv  DJITR.csv  DJSHMB.csv  DJUSHB.csv  FANG.csv  FAS-GEN.csv  FAS-SIM-RSI.csv  FAS-SIM.csv  FAS.csv  FDN.csv  FNGB-GEN.csv  FNGB.csv  FNGU-SIM-RSI.csv  FNGU-SIM.csv  FNGU.csv  HIBL-GEN.csv  HIBL-SIM-RSI.csv  HIBL.csv  IJH.csv  LABU-GEN.csv  LABU-SIM-RSI.csv  LABU.csv  MIDU-GEN.csv  MIDU-SIM-RSI.csv  MIDU.csv  NAIL-GEN.csv  NAIL-SIM-RSI.csv  NAIL-SIM.csv  NAIL.csv  NYFANG.csv  PILL-GEN.csv  PILL-SIM-RSI.csv  (+45 more)
charts-new/: CURE-GEN.csv  CURE.csv  DFEN-GEN.csv  DFEN.csv  DJINET.csv  DJITR.csv  DJSHMB.csv  FAS-GEN.csv  FAS.csv  FNGU-GEN.csv  FNGU.csv  HIBL-GEN.csv  HIBL.csv  IJH.csv  IXT.csv  LABU-GEN.csv  LABU.csv  MIDU-GEN.csv  MIDU.csv  NAIL-GEN.csv  NAIL.csv  NYFANG.csv  PILL-GEN.csv  PILL.csv  QQQ.csv  RETL-GEN.csv  RETL.csv  RUT.csv  SOXL-GEN.csv  SOXL.csv  SOXX.csv  SP400.csv  SP500HBETA.csv  SPSIBI.csv  SPSIPH.csv  SPSIRE.csv  SPXL-GEN.csv  SPXL.csv  SPY.csv  TECL-GEN.csv  (+16 more)
grpc/: client_test.py
indices/: aaii.csv  sahm.csv
protos/: backtest.proto
src/: configs.cpp  configs.h  configs.py  const.cpp  const.h  const.py  data.cpp  data.h  data.py  dca.cpp  dca.h  dca.py  env.cpp  env.h  env.py  full.cpp  full.h  full.py  plot.py  run.py  sim.cpp  sim.h  sim.py  test.cpp  test.h  test.py  utils.py
